--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 <body>
 
   <header>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6Bx6tlcYkWYMk3XLRC4Mx5n2hs19550o2mQ&s" alt="Logo Arianos ADV" class="logo float-logo" />
+    <img src="https://i.imgur.com/ZdkNzLI.jpeg" alt="Logo Arianos ADV" class="logo float-logo" />
     <h1>Assessoria Jurídica</h1>
     <p class="description">Um escritório tradicionalmente INOVADOR.</p>
   </header>
